[tool.poetry]
name = "kakao-chatbot"
version = "0.1.3"
description = "Effortlessly build KakaoTalk chatbots with Python objects - say goodbye to complex JSON and hello to streamlined development."
authors = ["Han Lee <hanlee@indiemaker.kr>", "Seokyoung Hong <seokyoung@sio2.kr>"]
readme = "README.md"
packages = [{include = "kakao_chatbot"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
